finished requirements but test cases
